[gd_scene load_steps=36 format=3 uid="uid://d0dcwfg0dlnhq"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_8f2ao"]
[ext_resource type="Texture2D" uid="uid://btbp0iwq7euj3" path="res://Sprites/Ataque_Ladron.png" id="2_0fw7c"]
[ext_resource type="Script" path="res://Scripts/animated_sprite_2d.gd" id="2_hm8f0"]
[ext_resource type="Texture2D" uid="uid://chg8hev80u5tc" path="res://Sprites/Ladron_quieto_Nuevo.png" id="2_xmg4b"]
[ext_resource type="PackedScene" uid="uid://cnxibisa17a23" path="res://Scenes/Objects/hitbox_component.tscn" id="3_aw84y"]
[ext_resource type="PackedScene" uid="uid://c83sbyilhfpv4" path="res://Scenes/Objects/flippable_shape.tscn" id="4_1crym"]
[ext_resource type="Texture2D" uid="uid://buhbmha8ogd0f" path="res://Sprites/Ladron_Salto.png" id="4_3114s"]
[ext_resource type="AudioStream" uid="uid://mxb0cxel0fuf" path="res://SFX/Slash.ogg" id="8_eupod"]
[ext_resource type="AudioStream" uid="uid://cryr27dej708m" path="res://SFX/Slash_hit.ogg" id="9_c8j7h"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1slop"]
radius = 6.0

[sub_resource type="AtlasTexture" id="AtlasTexture_xntv4"]
atlas = ExtResource("2_0fw7c")
region = Rect2(0, 0, 1365, 1365)

[sub_resource type="AtlasTexture" id="AtlasTexture_h5w1n"]
atlas = ExtResource("2_0fw7c")
region = Rect2(1365, 0, 1365, 1365)

[sub_resource type="AtlasTexture" id="AtlasTexture_uaon7"]
atlas = ExtResource("2_0fw7c")
region = Rect2(2730, 0, 1365, 1365)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcbm0"]
atlas = ExtResource("2_0fw7c")
region = Rect2(0, 1365, 1365, 1365)

[sub_resource type="AtlasTexture" id="AtlasTexture_llcdo"]
atlas = ExtResource("2_xmg4b")
region = Rect2(0, 0, 1365, 1365)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6bfs"]
atlas = ExtResource("2_xmg4b")
region = Rect2(1365, 0, 1365, 1365)

[sub_resource type="AtlasTexture" id="AtlasTexture_gij2r"]
atlas = ExtResource("2_xmg4b")
region = Rect2(2730, 0, 1365, 1365)

[sub_resource type="AtlasTexture" id="AtlasTexture_cpdrl"]
atlas = ExtResource("2_xmg4b")
region = Rect2(0, 1365, 1365, 1365)

[sub_resource type="AtlasTexture" id="AtlasTexture_qys1p"]
atlas = ExtResource("2_xmg4b")
region = Rect2(1365, 1365, 1365, 1365)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpv4w"]
atlas = ExtResource("2_xmg4b")
region = Rect2(2730, 1365, 1365, 1365)

[sub_resource type="AtlasTexture" id="AtlasTexture_24a2l"]
atlas = ExtResource("2_xmg4b")
region = Rect2(0, 2730, 1365, 1365)

[sub_resource type="AtlasTexture" id="AtlasTexture_r51wj"]
atlas = ExtResource("2_xmg4b")
region = Rect2(1365, 2730, 1365, 1365)

[sub_resource type="AtlasTexture" id="AtlasTexture_88e08"]
atlas = ExtResource("4_3114s")
region = Rect2(0, 0, 1365, 1365)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2vas"]
atlas = ExtResource("4_3114s")
region = Rect2(0, 0, 1365, 1365)

[sub_resource type="AtlasTexture" id="AtlasTexture_1wb85"]
atlas = ExtResource("4_3114s")
region = Rect2(0, 0, 1365, 1365)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8jdl"]
atlas = ExtResource("4_3114s")
region = Rect2(1365, 0, 1365, 1365)

[sub_resource type="AtlasTexture" id="AtlasTexture_ccjdl"]
atlas = ExtResource("4_3114s")
region = Rect2(1365, 0, 1365, 1365)

[sub_resource type="AtlasTexture" id="AtlasTexture_u01or"]
atlas = ExtResource("4_3114s")
region = Rect2(1365, 0, 1365, 1365)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwpi6"]
atlas = ExtResource("4_3114s")
region = Rect2(2730, 0, 1365, 1365)

[sub_resource type="AtlasTexture" id="AtlasTexture_kaeqx"]
atlas = ExtResource("4_3114s")
region = Rect2(2730, 0, 1365, 1365)

[sub_resource type="AtlasTexture" id="AtlasTexture_iuv28"]
atlas = ExtResource("4_3114s")
region = Rect2(2730, 0, 1365, 1365)

[sub_resource type="SpriteFrames" id="SpriteFrames_7v5dg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xntv4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h5w1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uaon7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcbm0")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_llcdo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6bfs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gij2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cpdrl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qys1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpv4w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24a2l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r51wj")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_88e08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2vas")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1wb85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8jdl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ccjdl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u01or")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwpi6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kaeqx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iuv28")
}],
"loop": false,
"name": &"jump",
"speed": 10.0
}]

[sub_resource type="AnimationRootNode" id="AnimationRootNode_68r2t"]

[sub_resource type="Animation" id="Animation_kwber"]
length = 0.001

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5yqmk"]
_data = {
"RESET": SubResource("Animation_kwber")
}

[node name="Player" type="CharacterBody2D"]
scale = Vector2(5.16807, 5.27567)
collision_layer = 3
script = ExtResource("1_8f2ao")
Health = 100.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_1slop")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.025117, 0.0245169)
sprite_frames = SubResource("SpriteFrames_7v5dg")
animation = &"jump"
autoplay = "default"
script = ExtResource("2_hm8f0")

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("flipabble_sprite") instance=ExtResource("3_aw84y")]
position = Vector2(9.53674e-07, -8.88178e-16)
flipabble_sprite = NodePath("../AnimatedSprite2D")

[node name="FlippableShape" parent="HitboxComponent" instance=ExtResource("4_1crym")]
position = Vector2(11.9967, -0.189549)
default_position = Vector2(10, 0)

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath(".")
tree_root = SubResource("AnimationRootNode_68r2t")
anim_player = NodePath("../AnimationPlayer")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimationTree")
libraries = {
"": SubResource("AnimationLibrary_5yqmk")
}

[node name="Timer" type="Timer" parent="."]

[node name="Timer2" type="Timer" parent="."]

[node name="Slash" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_eupod")

[node name="SlashHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_c8j7h")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
